# keyboard-keynames

./: Cargo.toml  LICENSE  README.md
src/: errors.rs  lib.rs
src/platform/: mod.rs
src/platform/other/: key_layout.rs  mod.rs
src/platform/unix/: key_layout.rs
src/platform/windows/: key_layout.rs  mod.rs
